--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -4,6 +4,7 @@
   top: 0;
   left: 0;
   width: 100%;
+  height: 100%;
   z-index: 99;
   background-color: transparentize(white, 0.1);
   text-align: center;
@@ -22,7 +23,7 @@
     top: 1rem;
     display: block;
     width: 2rem;
-    height: 0.1rem;
+    height: 0.15rem;
     background: white;
     &:nth-child(1) {
       transform: rotate(-45deg);
@@ -37,6 +38,7 @@
   color: white;
   display: inline-block;
   position: relative;
+  top: 5%;
   padding: 60px 50px;
   text-align: left;
 
