--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -1,6 +1,6 @@
 .image-modal {
   display: none;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -38,7 +38,8 @@
   color: white;
   display: inline-block;
   position: relative;
-  top: 5%;
+  top: 50%;
+  transform: translateY(-50%);
   padding: 60px 50px;
   text-align: left;
 
@@ -46,6 +47,7 @@
     padding: 20px 20px 0;
     text-align: left;
     h3 {
+      font-size: 1rem;
       font-weight: lighter;
     }
     p {
@@ -59,7 +61,6 @@
     letter-spacing: 2px;
     font-size: 0.5rem;
     margin-top: 40px;
-
     a {
       margin-right: 20px;
     }
