--- a/navmenu.css
+++ b/navmenu.css
@@ -19,10 +19,8 @@
 #mega-menu-wrap-primary-menu #mega-menu-primary-menu > li.mega-menu-flyout ul.mega-sub-menu {
     z-index: 999;
     position: absolute;
-    width: 250px;
-    background: #0f1129;
-
 }
+
 #mega-menu-wrap-primary-menu #mega-menu-primary-menu li.mega-menu-flyout.mega-menu-item-has-children > a.mega-menu-link:after, #mega-menu-wrap-primary-menu #mega-menu-primary-menu li.mega-menu-flyout li.mega-menu-item-has-children > a.mega-menu-link:after, #mega-menu-wrap-primary-menu #mega-menu-primary-menu > li.mega-menu-item-has-children > a.mega-menu-link:after {
   content: no-close-quote;
 
@@ -37,7 +35,6 @@
 
 #mega-menu-wrap-primary-menu #mega-menu-primary-menu > li.mega-menu-item {
   height: 70px;
-  border: none;
   line-height: 70px;
 }
 
@@ -48,32 +45,18 @@
 #mega-menu-wrap-primary-menu #mega-menu-primary-menu > li.mega-menu-flyout ul.mega-sub-menu {
     z-index: 999;
     position: absolute;
-    width: 240px;
     background: #0f1129;
-    height: 115px;
+    height: auto;
 }
-ul.mega-sub-menu {
-   background-color: #0f1129
-   }
 
    #mega-menu-wrap-primary-menu #mega-menu-primary-menu > li.mega-menu-flyout ul.mega-sub-menu li.mega-menu-item a.mega-menu-link {
     display: block;
-    background: #0f1129;
-    background-image: initial;
-    background-position-x: initial;
-    background-position-y: initial;
-    background-size: initial;
-    background-repeat-x: initial;
-    background-repeat-y: initial;
-    background-attachment: initial;
-    background-origin: initial;
-    background-clip: initial;
     background-color: rgb(15, 17, 41);
     color: #fff;
     font-family: inherit;
     font-size: 14px;
     font-weight: normal;
-    padding: 0px 10p;
+    padding: 0px;;
     height: 35px;
     line-height: 35px;
     text-decoration: none;
@@ -84,11 +67,13 @@ ul.mega-sub-menu {
 #mega-menu-wrap-primary-menu #mega-menu-primary-menu > li.mega-menu-flyout ul.mega-sub-menu li.mega-menu-item {
   height: 35px;
   line-height: 35px;
+  width: 110%;
+  padding: 0 5%;
 }
 
 #mega-menu-wrap-primary-menu #mega-menu-primary-menu a.mega-menu-link .mega-description-group {
     vertical-align: middle;
-    display: inline-block;
+    display: block;
     font-family: Montserrat;
     font-size: 11px;
     font-weight: 600;
@@ -122,25 +107,50 @@ menu-link .mega-description-group .mega-menu-description {
 
 
 @media (max-width: 500px) {
+#mega-menu-wrap-primary-menu .mega-menu-toggle .mega-toggle-block-1:before {
+  content: '\61';
+  font-size: 50px;
+  color: white;
+  font-family: 'ETmodules' !important;
+  font-weight: normal;
+}
+#mega-menu-wrap-primary-menu .mega-menu-toggle{
+  height: 70px;
+  line-height: 70px;
+  display: block;
+  width: 100%;
+  }
+
+#mega-menu-wrap-primary-menu  .mega-menu-toggle.mega-menu-open .mega-toggle-block-1:before {
+  content: '\4d';
+}
+
+#mega-menu-wrap-primary-menu  .mega-menu-toggle.mega-menu-open{
+ background: url(http://leidencollectionexhibition.com/wp-content/uploads/2017/01/Logoh.png);
+ background-repeat: no-repeat;
+ background-position: 2rem center;
+}
+
+
+
 
 #top-menu-nav {
  display: block;
+ float: none;
  width: 100%;
 }
 
-/*
+
 #mega-menu-wrap-primary-menu #mega-menu-primary-menu > li.mega-menu-flyout ul.mega-sub-menu {
     z-index: 999;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-    width: 100%;
-    height: 100%;
     background: #0f1129;
+    height: auto;
 }
-*/
+
+#mega-menu-wrap-primary-menu #mega-menu-primary-menu > li.mega-menu-flyout ul.mega-sub-menu li.mega-menu-item a.mega-menu-link {
+    background: #0f1129;
+    color: grey;
+}
 
 #mega-menu-wrap-primary-menu .mega-menu-toggle.mega-menu-open + #mega-menu-primary-menu {
     height: 100vh;
@@ -153,9 +163,17 @@ menu-link .mega-description-group .mega-menu-description {
 
 #mega-menu-wrap-primary-menu #mega-menu-primary-menu > li.mega-menu-item > a.mega-menu-link {
     font-family: "Montserrat Ultralight", "Open Sans", Arial, sans-serif;
-    font-weight: bold;
+    font-weight: normal;
     font-size: 1rem;
     letter-spacing: 0.2rem;
+}
+
+#mega-menu-wrap-primary-menu #mega-menu-primary-menu > li.mega-menu-item > a.mega-menu-link:hover {
+   color: white;
+}
+
+#mega-menu-wrap-primary-menu #mega-menu-primary-menu > li.mega-menu-flyout ul.mega-sub-menu li.mega-menu-item {
+  padding: 0 0 0 5%;
 }
 
 
